Throw IllegalStateException from afterPropertiesSet
Consistently use Assert.state in the afterPropertiesSet()
methods to throw IllegalStateException instead of
IllegalArgumentException when some properties are missing
and/or invalid.

Resolves #2244

--- a/spring-batch-docs/src/main/asciidoc/step.adoc
+++ b/spring-batch-docs/src/main/asciidoc/step.adoc
@@ -1397,7 +1397,7 @@ public class FileDeletingTasklet implements Tasklet, InitializingBean {
     }
 
     public void afterPropertiesSet() throws Exception {
-        Assert.notNull(directory, "directory must be set");
+        Assert.state(directory != null, "directory must be set");
     }
 }
 ----
