--- a/spring-batch-docs/asciidoc/schema-appendix.adoc
+++ b/spring-batch-docs/asciidoc/schema-appendix.adoc
@@ -107,7 +107,7 @@ CREATE TABLE BATCH_JOB_INSTANCE  (
   JOB_INSTANCE_ID BIGINT  PRIMARY KEY ,
   VERSION BIGINT,
   JOB_NAME VARCHAR(100) NOT NULL ,
-  JOB_KEY VARCHAR(2500)
+  JOB_KEY VARCHAR(32) NOT NULL
 );
 ----
 
